--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -136,7 +136,10 @@
               </div>
             </div>
 
-            <div style="background-image: url('@webRoot/images/discount/1.png')" class="discount__img"/>
+            <div
+              style="background-image: url('@webRoot/images/discount/1.png')"
+              class="discount__img"
+            />
           </div>
         </div>
       </section>
@@ -215,6 +218,37 @@
                     class="news__picture-grid__img news__picture-grid__img_2row"
                   />
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Отзывы -->
+      <section class="section">
+        <div class="container">
+          <div class="feedback root__title-section-align">
+            <div class="title title_size_lg feedback__title">Отзывы</div>
+            <div class="row feedback__row">
+              <div class="col-4">
+                <div class="feedback__text">
+                  Всё очень понравилось! Быстрое оформление заказа, выбор
+                  удобного времени доставки. Всем большое спасибо!
+                </div>
+                <div class="subtitle subtitle_bold">Марина</div>
+              </div>
+              <div class="col-4">
+                <div class="feedback__text">
+                  Внимательные флористы, вежливые. Магазин находится прям рядом
+                  с метро. Букет очень понравился, буду ещё заказывать!
+                </div>
+                <div class="subtitle subtitle_bold">Татьяна</div>
+              </div>
+              <div class="col-4">
+                <div class="feedback__text">
+                  Выбор букетов на любой вкус и цену. Бывают хорошие скидки, а
+                  флористы всегда помогут и точно соберут красивый букет!
+                </div>
+                <div class="subtitle subtitle_bold">Ольга</div>
               </div>
             </div>
           </div>
