Add contacts block and maps

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -254,6 +254,41 @@
           </div>
         </div>
       </section>
+
+      <!-- Контакты и карта -->
+      <section class="section section_padding-bottom-none">
+        <div class="contacts">
+          <div class="contacts__maps">
+            <script
+              type="text/javascript"
+              charset="utf-8"
+              async
+              src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Af87dd49aab8a78d5198e3e3b3b2a70731b6777578f7253a8f4072d6d20d59cdb&amp;width=100%25&amp;height=644&amp;lang=ru_RU&amp;scroll=true"
+            ></script>
+          </div>
+          <div class="container contacts__container">
+            <div class="contacts__card">
+              <div class="title title_size_lg">Мы ждем вас</div>
+              <div class="subtitle contacts__subtitle">Приходите к нам:</div>
+              <div class="contacts__text">
+                Санкт-Петербург, ул. Большая Конюшенная, 19
+              </div>
+              <div class="subtitle contacts__subtitle">Режим работы:</div>
+              <div class="contacts__text">Пн-Вск, с 9-00 до 20-00</div>
+              <div class="subtitle contacts__subtitle">Позвоните нам:</div>
+              <div class="contacts__text">
+                <a href="tel:+78129834719"> + 7 (812) 983-47-19</a>
+              </div>
+              <div class="subtitle contacts__subtitle">Напишите нам:</div>
+              <div class="contacts__text">
+                <a href="mailto:workbd@bk.ru&cc=workbd@bk.ru?body=Привет!"
+                  >info@botanika.ru</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer footer_bg">
